Changelog
=========

1.2 - unreleased
----------------


1.1 - 2011-03-20
----------------

- Handle Unicode Byte Order Mark at the beginning of files. This closes
  http://dev.plone.org/plone/ticket/10813.
  [hannosch, kleist]

- Fixed potential UnicodeError in exception handling. This closes
  http://dev.plone.org/plone/ticket/11058.
  [hannosch, vincentfretin]

1.0 - 2009-05-23
----------------

- Updated package description and metadata, relicense from GPL to BSD. Note
  about Babel which supersedes this package in all possible ways.
  [hannosch]

0.6 - 2007-11-02
----------------

- Fixed header parsing.
  [hannosch]

0.5 - 2007-11-01
----------------

- Optimized file parsing by using more elif clauses and avoiding an insane
  number of startswith and isinstance calls.
  [hannosch]

0.4 - 2007-10-13
----------------

- Added header_only argument to the read method, that allows to only parse
  the header of a file without reading and parsing all the messages.
  [hannosch]

0.3 - 2007-08-25
----------------

- Added an explicit read method, which only parses the po file and stores
  it in the messages dict, but does not compile it.
  [hannosch]

0.2 - 2007-08-23
----------------

- Bumped version number to accommodate the number in the egg info.
  [hannosch]

0.1 - 2007-06-19
----------------

- Initial implementation of a Msgfmt class which supports the generation of
  Gettext mo files including support for the new msgctxt keyword.
  [hannosch]